Bug 431551 - 4.4.2-beta2 fails to build on openSUSE Leap 15.1
Summary: 4.4.2-beta2 fails to build on openSUSE Leap 15.1
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.4.2-beta2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-13 16:49 UTC by Wolfgang Bauer
Modified: 2021-01-14 16:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2021-01-13 16:49:37 UTC
/home/abuild/rpmbuild/BUILD/krita-4.4.2-beta2/libs/flake/svg/SvgMeshArray.cpp: In member function 'SvgMeshStop SvgMeshArray::getStop(SvgMeshPatch::Type, int, int) const':
/home/abuild/rpmbuild/BUILD/krita-4.4.2-beta2/libs/flake/svg/SvgMeshArray.cpp:199:5: error: 'assert' was not declared in this scope
     assert(false);
     ^~~~~~

I'm not completely sure why that happens on openSUSE Leap 15.1 but not later versions, maybe due to this change in Qt that's not in 5.9 yet:
https://code.qt.io/cgit/qt/qtbase.git/commit/src/corelib/global/qglobal.h?id=0ac2dca977e

Replacing `assert(false)` (line#199 in libs/flake/svg/SvgMeshArray.cpp) with `KIS_ASSERT(false)` like done in other parts of this file fixes the problem.
Comment 1 Halla Rempt 2021-01-14 10:41:13 UTC
Git commit b74a82d594f9b2ac547608e5f96bd98de5cf0e5e by Halla Rempt.
Committed on 14/01/2021 at 10:40.
Pushed by rempt into branch 'krita/4.4.2'.

Make it possible to build with Qt 5.9

M  +1    -1    libs/flake/svg/SvgMeshArray.cpp

https://invent.kde.org/graphics/krita/commit/b74a82d594f9b2ac547608e5f96bd98de5cf0e5e
Comment 2 Halla Rempt 2021-01-14 10:41:39 UTC
Git commit c6ab55565d65e019b6466a56f1415000391b2761 by Halla Rempt.
Committed on 14/01/2021 at 10:41.
Pushed by rempt into branch 'krita/4.3'.

Make it possible to build with Qt 5.9
(cherry picked from commit b74a82d594f9b2ac547608e5f96bd98de5cf0e5e)

M  +1    -1    libs/flake/svg/SvgMeshArray.cpp

https://invent.kde.org/graphics/krita/commit/c6ab55565d65e019b6466a56f1415000391b2761
Comment 3 Wolfgang Bauer 2021-01-14 16:56:44 UTC
Works, thank you!