Make it possible to build with Qt 5.9

BUG:431551